{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 33,
  "lineage": "a36519a7-4ba8-7071-6eda-0690d91c7b5c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/networkInterfaces/rg-mini-finance-nic",
            "internal_domain_name_suffix": "aw5vesfhe0muvj2a2fjqt1gzbg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/publicIPAddresses/rg-mini-finance-pip",
                "subnet_id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/virtualNetworks/rg-mini-finance-vnet/subnets/rg-mini-finance-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "rg-mini-finance-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-mini-finance"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "rg-mini-finance-nic",
            "resource_group_name": "rg-mini-finance",
            "subscription_id": "76ac7853-64f7-4ae7-97f6-e0ace42c6322"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/networkInterfaces/rg-mini-finance-nic|/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/networkSecurityGroups/rg-mini-finance-nsg",
            "network_interface_id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/networkInterfaces/rg-mini-finance-nic",
            "network_security_group_id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/networkSecurityGroups/rg-mini-finance-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/networkSecurityGroups/rg-mini-finance-nsg",
            "location": "eastus",
            "name": "rg-mini-finance-nsg",
            "resource_group_name": "rg-mini-finance",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "rg-mini-finance-nsg",
            "resource_group_name": "rg-mini-finance",
            "subscription_id": "76ac7853-64f7-4ae7-97f6-e0ace42c6322"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/networkSecurityGroups/rg-mini-finance-nsg/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "rg-mini-finance-nsg",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "rg-mini-finance",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTP",
            "network_security_group_name": "rg-mini-finance-nsg",
            "resource_group_name": "rg-mini-finance",
            "subscription_id": "76ac7853-64f7-4ae7-97f6-e0ace42c6322"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/networkSecurityGroups/rg-mini-finance-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "rg-mini-finance-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rg-mini-finance",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SSH",
            "network_security_group_name": "rg-mini-finance-nsg",
            "resource_group_name": "rg-mini-finance",
            "subscription_id": "76ac7853-64f7-4ae7-97f6-e0ace42c6322"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/publicIPAddresses/rg-mini-finance-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.226.34.185",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "rg-mini-finance-pip",
            "resource_group_name": "rg-mini-finance",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/virtualNetworks/rg-mini-finance-vnet/subnets/rg-mini-finance-subnet",
            "name": "rg-mini-finance-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-mini-finance",
            "virtual_network_name": "rg-mini-finance-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "rg-mini-finance-subnet",
            "resource_group_name": "rg-mini-finance",
            "subscription_id": "76ac7853-64f7-4ae7-97f6-e0ace42c6322",
            "virtual_network_name": "rg-mini-finance-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4852bf05-26a7-4a99-a780-e15309ecd90e",
            "id": "/subscriptions/76ac7853-64f7-4ae7-97f6-e0ace42c6322/resourceGroups/rg-mini-finance/providers/Microsoft.Network/virtualNetworks/rg-mini-finance-vnet",
            "location": "eastus",
            "name": "rg-mini-finance-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-mini-finance"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "rg-mini-finance-vnet",
            "resource_group_name": "rg-mini-finance",
            "subscription_id": "76ac7853-64f7-4ae7-97f6-e0ace42c6322"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}